<resources>
    <string name="app_name">MovieStar</string>
    <string name="movie_star">Movie Star   \t \t \t \t \t \t Movie Star \t \t \t \t </string>
    <string name="create_a_password">Create a 6 digits Password</string>
    <string name="reset"> Reset </string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="email_id_text">Enter any gmail Id</string>
    <string name="alert_yes_btn">Yes</string>
    <string name="alert_no_btn">No</string>
    <string name="new_user">New User?</string>
    <string name="enter_your_password">Enter your Password </string>
    <string name="enter_your_email_id">Enter Your User Name\nEmail Id and Password </string>
    <string name="no_btn_alert">No</string>
    <string name="alert_msg">Do you want to Exit from this App?</string>
    <string name="alert_title">Exit!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="upcoming_movies">UpComing Movies</string>
    <string name="hindi_movies">Hindi Movies</string>
    <string name="telugu_movies">Telugu Movies</string>
    <string name="english_movies">English Movies</string>
    <string name="panjabi_movies">Panjabi Movies</string>

    <string name="alert_logout_msg">Dou you want to LogOut</string>
    <string name="logout_success_msg">Logout Successfully</string>
    <string name="signin">SignIn</string>
    <string name="singup">SingUp</string>
    <string name="prasanth">Prasanth</string>
    <string name="description">Description</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="give_your_feedback">Give Your FeedBack</string>
    <string name="feedback">Feedback</string>
    <string name="kanada_movies">Kanada Movies</string>
    <string name="massage_textview">Massage </string>
    <string name="type_a_message">Type a message</string>
    <string name="name_crew">Name :</string>
    <string name="character_crew">Character :</string>
    <string name="reviews">Reviews</string>
    <string name="experience">Experience:</string>
    <string name="katta_prasanth_kumar">Katta Prasanth Kumar</string>
    <string name="name_profile">Name:</string>
    <string name="mail_id">Mail Id:</string>
    <string name="noData">No Data</string>
    <string name="deleted">Deleted Successfully</string>
    <string name="notdeleted">Not Deleted</string>

    <string name="permissions">Need Internet Permissions</string>
    <string name="error_dialog_internet">No Internet Connection!</string>
    <string name="goto_settings_positive_btn">Go to Settings</string>
    <string name="experience_years">2+</string>
    <string name="developer_mail_id">kpcode4u@gmail.com</string>
    <string name="kattaprasanthkumar">KattaPrasanthKumar</string>
    <string name="forgetpassword">ForgetPassword</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="we_need_your_registered_email_id_to_sent_your_password">We need your Registered Email ID to sent your Password</string>

    <string name="signup"> Sign Up </string>
    <string name="ok_alert">OK</string>
    <string name="enter_your_email_id_login">Enter your Email Id</string>
    <string name="author_review_adaptertext">Author:</string>
    <string name="cancel_alert">Cancel</string>
    <string name="image_todo">Image_TODO</string>
    <string name="trailer">Trailer</string>
    <string name="noreview_text">No Review Available</string>
    <string name="description_details">Description</string>
    <string name="releasing_ndate">Releasing  Date :</string>
    <string name="title">title</string>
    <string name="title_content">title</string>
    <string name="tamil_movies">Tamil Movies</string>
    <string name="nav_home">HOME</string>
    <string name="nav_chat_box">Chat Box</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_logout">LogOut</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="nav_feedback">FeedBack</string>
    <string name="nav_share">Share</string>
    <string name="nav_developer">Developer</string>
    <string name="menu_unfavorite_all">UnFavorite All</string>
    <string name="title_detail">title</string>
    <string name="review_author">Author</string>
    <string name="reviews_text">Reviews</string>
    <string name="totalRating">/10</string>

    <string name="share_mimetype">text/plain</string>
    <string name="no_favorites">You have No Favorites yet!</string>
    <string name="snakBar_no_fav">No Favorite Movies yet!</string>
    <string name="base_imgUrl">http://image.tmdb.org/t/p/w500</string>
    <string name="totalRatingMovie">/10</string>
    <string name="noReviews">No Reviews for this Movie</string>
    <string name="sorryToast">sorry!..</string>
    <string name="errorCastApiData">Error in Fetching in Casts Data</string>
    <string name="eoorsFeedBakMsg">FeedBack Stored Sccessfully</string>
    <string name="errorSomethingMsg">You should be Enter Something Feedback!</string>
    <string name="internetConnneted">Internet Connected</string>
    <string name="moviesResfreshed">Movies Refreshed</string>
    <string name="errorAPIData">Error in Fetching Data!</string>
    <string name="pwdErrorMsg">Password Length must 6 characters only</string>
    <string name="failedErrorMsg">Failed to Create user:</string>
    <string name="reg_suessfull">Registered successfully</string>
    <string name="pswdErrorMsg">Password Length must be atleast 6 characters</string>
    <string name="errorTrailerData">Error in Fetching Trailer Data</string>
    <string name="trailersTitle">Trailers</string>
    <string name="fab_content">fab_content</string>
    <string name="posterErrorToast">Error in Fetching in Posters Data</string>
    <string name="castharName">Charater:</string>
    <string name="noApiData">No Data from API</string>
    <string name="needPermissions">Need Permissions</string>


</resources>
