<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"
            android:id="@+id/image_crew"
            android:contentDescription="@string/image_todo"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_crew"
            android:textColor="@color/wight_color"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/name_crew"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_crew"
            android:textColor="@color/wight_color"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/character_crew"/>
    </LinearLayout>
</android.support.v7.widget.CardView>