<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0db97d"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <android.support.v7.widget.CardView
        android:layout_width="305dp"
        android:layout_height="329dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="#f7e847"
        android:elevation="@dimen/elevation_4dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dimens_20dp"
            android:layout_marginRight="@dimen/dimens_20dp"
            android:layout_marginTop="@dimen/marginTop_30dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:hint="@string/enter_your_email_id_login"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_adminPassword"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_edittext"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="numberPassword"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_margin="10dp"
                android:weightSum="5">

                <Button
                    android:id="@+id/mentor_login"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="@dimen/dimes_20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tick_icon"
                    android:onClick="login"
                    android:padding="12dp"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/newUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dimens_30dp"
                    android:onClick="register"
                    android:text="@string/new_user"
                    android:textColor="#1ba3f2"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/user_profile_photo"
        android:layout_width="109dp"
        android:layout_height="113dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:elevation="4dp"
        android:src="@drawable/boy"
        android:contentDescription="@string/image_todo" />
</RelativeLayout>
